Fix issue #0004568: Reduce gap on shipping page when adding gift msg for Order Level only

--- a/skin/frontend/default/default/css/boxes.css
+++ b/skin/frontend/default/default/css/boxes.css
@@ -1249,7 +1249,7 @@ tr.grand_total td, p.grand_total { padding-top:5px; padding-bottom:5px; }
 .giftmessages .gift-box .scroll-box
 {
     overflow: auto;
-    height: 500px;
+    height: 260px;
 }
 
 .giftmessages .product-image
